tests/models/snapshots/can_filter.snap
---
source: tests/models/items.rs
expression: "(starting_list, all_items, small_items, inf_items)"
---
(
    ItemPage {
        items: [],
        page_num: 0,
        total_pages: 0,
        page_size: 50,
        total_results: 0,
    },
    ItemPage {
        items: [
            Item {
                created_at: DATE,
                updated_at: DATE,
                id: 2,
                name: "Test item2",
                description: None,
                quantity: 1,
                size: Medium,
                infinite: true,
            },
            Item {
                created_at: DATE,
                updated_at: DATE,
                id: 1,
                name: "Test item",
                description: None,
                quantity: 2,
                size: Small,
                infinite: false,
            },
        ],
        page_num: 0,
        total_pages: 1,
        page_size: 50,
        total_results: 2,
    },
    ItemPage {
        items: [
            Item {
                created_at: DATE,
                updated_at: DATE,
                id: 1,
                name: "Test item",
                description: None,
                quantity: 2,
                size: Small,
                infinite: false,
            },
        ],
        page_num: 0,
        total_pages: 1,
        page_size: 50,
        total_results: 1,
    },
    ItemPage {
        items: [
            Item {
                created_at: DATE,
                updated_at: DATE,
                id: 2,
                name: "Test item2",
                description: None,
                quantity: 1,
                size: Medium,
                infinite: true,
            },
        ],
        page_num: 0,
        total_pages: 1,
        page_size: 50,
        total_results: 1,
    },
)
